Make pgautoupgrade work with Bitnami Postgres container

--- a/Dockerfile.bookworm
+++ b/Dockerfile.bookworm
@@ -145,6 +145,12 @@ RUN cd postgresql-16.* && \
 # Use the PostgreSQL Bookworm image as our output image base
 FROM postgres:${PGTARGET}-bookworm
 
+# Copy default configuration in case the original container does not provide it (Bitnami ...)
+RUN mkdir -p /opt/pgautoupgrade && \
+  chmod 660 /opt/pgautoupgrade && \
+  chown 999:999 /opt/pgautoupgrade
+COPY --chown=999 postgresql.conf pg_hba.conf /opt/pgautoupgrade/
+
 # We need to define this here, to make the above PGTARGET available after the FROM
 ARG PGTARGET
 
@@ -174,12 +180,11 @@ RUN apt update && \
 # Pass the PG build target through to the running image
 ENV PGTARGET=${PGTARGET}
 
-# Copy across the post-upgrade shell script
-COPY pgautoupgrade-postupgrade.sh pgautoupgrade-healthcheck.sh /usr/local/bin/
+# Copy across all our shell scripts
+COPY pgautoupgrade-postupgrade.sh pgautoupgrade-healthcheck.sh postgres-docker-entrypoint.sh docker-entrypoint.sh /usr/local/bin/
 
 # Set up the script run by the container when it starts
 WORKDIR /var/lib/postgresql
-COPY docker-entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 HEALTHCHECK CMD /usr/local/bin/pgautoupgrade-healthcheck.sh
